--- a/styles/landing.module.css
+++ b/styles/landing.module.css
@@ -10,7 +10,7 @@
 .landing {
   position: relative;
   background-color: var(--color-bg-primary);
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 
